force-app/main/default/objects/nFORCE__Route_Tile__c/nFORCE__Route_Tile__c.object-meta.xml
<CustomObject>
    <description>A junction object used to map UI Routes and Tiles.</description>
    <label>Route Tile</label>
    <nameField>
        <displayFormat>RT-{000000}</displayFormat>
        <label>Tile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>