force-app/main/default/objects/nFORCE__Route_Tile__c/fields/LLC_BI__Institution__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>You can display tiles on a per-Institution basis. Use this lookup field to select a specific Institution where this tile displays. If blank, the tile appears on every instance of this route, regardless of Institution.</description>
    <inlineHelpText>Select a specific Institution where this tile displays. If blank, the tile appears on every instance of this route, regardless of Institution.</inlineHelpText>
    <label>Institution</label>
    <referenceTo>LLC_BI__Institution__c</referenceTo>
    <relationshipLabel>Route Tiles</relationshipLabel>
    <relationshipName>Route_Tiles</relationshipName>
    <type>Lookup</type>
</CustomField>