force-app/main/default/objects/nFORCE__Route_Tile__c/fields/nFORCE__Route__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Route on which to display this Tile.</description>
    <label>Route</label>
    <referenceTo>nFORCE__Route__c</referenceTo>
    <relationshipLabel>Route Tiles</relationshipLabel>
    <relationshipName>Route_Tiles</relationshipName>
    <type>Lookup</type>
</CustomField>