force-app/main/default/objects/nFORCE__Route_Tile__c/fields/nFORCE__Tile__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Tile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Tile to display on this Route.</description>
    <label>Tile</label>
    <referenceTo>nFORCE__Tile__c</referenceTo>
    <relationshipLabel>Route Tiles</relationshipLabel>
    <relationshipName>Route_Tiles</relationshipName>
    <type>Lookup</type>
</CustomField>